# operation-cli

./: Dockerfile  README.md  docker-compose.yml  kubectl  package-lock.json  pyproject.toml
cli/: main.py
cli/resources/: credentials.json
cli/resources/chroma_db/: chroma-collections.parquet  chroma-embeddings.parquet
cli/resources/chroma_db/index/: id_to_uuid_333b5637-adbe-4a8e-baf1-d3babb06a4fd.pkl  index_metadata_333b5637-adbe-4a8e-baf1-d3babb06a4fd.pkl  uuid_to_id_333b5637-adbe-4a8e-baf1-d3babb06a4fd.pkl
cli/utils/: ai_enums.py  config.py  cronParser.py  database_helper.py  deepseek.py  dict_helper.py  env_enums.py  fanyi_baidu_helper.py  gemini_uitl.py  jwt_utils.py  local_project_helper.py  my_tools.py  ops_cli.db  pushplus.py  qWen.py  sqlite3_util.py  sshtunnel_util.py  tools_enums.py
tmp/hsperfdata_root/: 1271
