[tool.poetry]
name = "operation-cli"
version = "0.1.0"
description = ""
authors = ["wangs <wal365@126.com>"]
readme = "README.md"
packages = [{include = "cli"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.9.0"}
requests = "^2.31.0"
pymysql = "^1.1.0"
cryptography = "^41.0.5"
sshtunnel = "^0.4.0"
pyjwt = "^2.8.0"
langchain = "^0.0.333"
gitpython = "^3.1.40"
volcengine = "^1.0.128"
google-genai = "^1.3.0"
openai = "^1.65.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli="cli.main:app"


